--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/hooks": "^2.8.1",
     "expo": "~46.0.13",
+    "expo-app-loading": "~2.1.0",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
