--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/hooks": "^2.8.1",
     "expo": "~46.0.13",
     "expo-app-loading": "~2.1.0",
+    "expo-splash-screen": "~0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
