--- a/package.json
+++ b/package.json
@@ -11,11 +11,16 @@
   "dependencies": {
     "@expo/webpack-config": "^0.17.0",
     "@react-native-community/hooks": "^2.8.1",
+    "@react-navigation/native": "^6.0.13",
     "expo": "~46.0.13",
+    "expo-font": "^10.2.1",
+    "expo-splash-screen": "^0.16.2",
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-web": "^0.18.9"
   },
   "devDependencies": {
