--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/hooks": "^2.8.1",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/native-stack": "^6.9.1",
+    "@react-navigation/stack": "^6.3.2",
     "expo": "~46.0.13",
     "expo-font": "^10.2.1",
     "expo-splash-screen": "^0.16.2",
